# vexil

./: .gitattributes  .gitignore  .vexilbot.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  dist-workspace.toml  release-plz.toml
.agents/: marketing-context.md
.agents/launch/: announcing-vexil.md  hacker-news.md  social-content.md
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  npm-publish.yml  release-plz.yml  release.yml
compliance/vectors/: README.md  arrays_maps.json  delta.json  enums.json  evolution.json  messages.json  optionals.json  primitives.json  sub_byte.json  unions.json  v1_types.json
corpus/: MANIFEST.md
corpus/invalid/: 001_missing_namespace.vexil  002_duplicate_namespace.vexil  003_namespace_invalid_component.vexil  004_namespace_reserved.vexil  005_namespace_empty.vexil  006_decl_name_lowercase.vexil  007_decl_name_underscore.vexil  008_decl_name_duplicate.vexil  009_field_name_uppercase.vexil  010_duplicate_ordinal.vexil  011_ordinal_too_large.vexil  012_duplicate_field_name.vexil  013_field_references_config.vexil  014_newtype_over_newtype.vexil  015_newtype_over_config.vexil  016_config_missing_default.vexil  017_config_with_ordinal.vexil  018_config_map_type.vexil  019_config_result_type.vexil  020_config_encoding_annotation.vexil  021_invalid_escape.vexil  022_duplicate_annotation.vexil  023_import_after_decl.vexil  024_import_named_aliased.vexil  025_varint_on_subbyte.vexil  026_zigzag_on_unsigned.vexil  027_varint_on_signed.vexil  (+39 more)
crates/vexil-codegen/: Cargo.toml
crates/vexil-codegen-go/: CHANGELOG.md  Cargo.toml  README.md
crates/vexil-codegen-go/src/: backend.rs  delta.rs  emit.rs  enum_gen.rs  flags.rs  lib.rs  message.rs  newtype.rs  types.rs  union_gen.rs
crates/vexil-codegen-go/tests/: golden.rs
crates/vexil-codegen-go/tests/golden/: 001_minimal.go  002_primitives.go  003_sub_byte.go  004_semantic_types.go  005_parameterized.go  006_message.go  007_enum.go  008_flags.go  009_union.go  010_newtype.go  011_config.go  012_imports.go  013_annotations.go  014_keywords_as_fields.go  015_forward_refs.go  016_recursive.go  017_escapes.go  018_comments.go  019_evolution_append_field.go  020_evolution_add_variant.go  021_empty_optionals.go  022_nested_schemas.go  023_recursive_depth.go  024_zero_length_payload.go  025_evolution_deprecate.go  026_required_to_optional.go  027_delta_on_message.go  028_typed_tombstone.go  029_import_then_annotation.go  030_newtype_map_key.go  031_custom_annotations.go  032_reserved_variant_names.go  033_fixed_point.go  034_type_alias.go  035_const.go  036_where_clause.go  037_fixed_array.go  038_set.go  039_geometric.go  040_inline_bits.go  (+3 more)
crates/vexil-codegen-rust/: CHANGELOG.md  Cargo.toml  README.md
crates/vexil-codegen-rust/src/: annotations.rs  backend.rs  boxing.rs  config.rs  delta.rs  emit.rs  enum_gen.rs  fn_body.rs  lib.rs  message.rs  newtype.rs  types.rs  union_gen.rs
crates/vexil-codegen-rust/tests/: compile_check.rs  delta_compliance.rs  evolution_roundtrip.rs  golden.rs  golden_bytes.rs  project_compile_check.rs  union_array_roundtrip.rs
crates/vexil-codegen-rust/tests/golden/: 003_sub_byte.rs  006_message.rs  007_enum.rs  009_union.rs  016_recursive.rs  028_typed_tombstone.rs  030_newtype_map_key.rs  032_reserved_variant_names.rs  033_fixed_point.rs  037_fixed_array.rs  038_set.rs  039_geometric.rs  040_inline_bits.rs
crates/vexil-codegen-ts/: CHANGELOG.md  Cargo.toml  README.md
crates/vexil-codegen-ts/src/: backend.rs  delta.rs  emit.rs  enum_gen.rs  flags.rs  lib.rs  message.rs  newtype.rs  types.rs  union_gen.rs
crates/vexil-codegen-ts/tests/: golden.rs  project_compile_check.rs
crates/vexil-codegen-ts/tests/golden/: 006_message.ts  007_enum.ts  008_flags.ts  009_union.ts  010_newtype.ts  011_config.ts  013_annotations.ts  016_recursive.ts  027_delta_on_message.ts  028_typed_tombstone.ts
crates/vexil-codegen/src/: boxing.rs  config.rs  delta.rs  emit.rs  enum_gen.rs  flags.rs  lib.rs  message.rs  types.rs  union_gen.rs
crates/vexil-codegen/tests/: compile_check.rs  golden.rs  project_compile_check.rs
crates/vexil-codegen/tests/golden/: 006_message.rs  007_enum.rs  008_flags.rs  009_union.rs  010_newtype.rs  011_config.rs  016_recursive.rs
crates/vexil-lang/: CHANGELOG.md  Cargo.toml  README.md
crates/vexil-lang/schemas/: pack.vexil
crates/vexil-lang/src/: canonical.rs  codegen.rs  compat.rs  diagnostic.rs  errors.rs  lib.rs  lower.rs  meta.rs  project.rs  remap.rs  resolve.rs  span.rs  typeck.rs  validate.rs
crates/vexil-lang/src/ast/: mod.rs  visit.rs
crates/vexil-lang/src/ir/: mod.rs  types.rs
crates/vexil-lang/src/lexer/: mod.rs  token.rs
crates/vexil-lang/src/parser/: decl.rs  expr.rs  import.rs  mod.rs
crates/vexil-lang/tests/: compile.rs  corpus.rs  lexer.rs  properties.rs
crates/vexil-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/vexil-runtime/src/: bit_reader.rs  bit_writer.rs  error.rs  framing.rs  geometric.rs  handshake.rs  leb128.rs  lib.rs  traits.rs  zigzag.rs
crates/vexil-runtime/tests/: properties.rs  wire_roundtrip.rs
crates/vexil-store/: CHANGELOG.md  Cargo.toml  README.md
crates/vexil-store/src/: convert.rs  decoder.rs  detect.rs  encoder.rs  error.rs  formatter.rs  header.rs  lexer.rs  lib.rs  meta.rs  parser.rs  validate.rs  value.rs
crates/vexil-store/tests/: bitpack_correctness.rs  compile_roundtrip.rs  map_key_order.rs  meta_roundtrip.rs  roundtrip.rs  wire_golden.rs
crates/vexilc/: CHANGELOG.md  Cargo.toml  README.md
crates/vexilc/src/: main.rs
crates/vexilc/tests/: compat.rs
docs/: limitations-and-gaps.md
release/: stewardship.json
runtimes/python/: README.md  pyproject.toml
runtimes/python/vexil_runtime/: __init__.py  bitio.py
spec/: vexil-grammar.peg  vexil-spec.md
(+351 files in other folders)
