[workspace]
resolver = "2"
members = ["crates/vexil-lang", "crates/vexilc", "crates/vexil-runtime", "crates/vexil-codegen-rust", "crates/vexil-store"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vexil-lang/vexil"
authors = ["Orix Systems contributors"]
readme = "README.md"
