[package]
name = "vexil-codegen-ts"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "TypeScript code generation backend for the Vexil schema compiler"
keywords = ["schema", "codegen", "typescript"]
categories = ["compilers", "development-tools"]

[dependencies]
vexil-lang = { path = "../vexil-lang", version = "^0.3.0" }
thiserror = "2"

[dev-dependencies]
test-case = "3"
