[package]
name = "vexil-lang"
version = "0.4.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "Compiler library for the Vexil schema definition language — lexer, parser, IR, and type checker"
keywords = ["schema", "serialization", "codegen", "protocol", "compiler"]
categories = ["compilers", "encoding", "development-tools"]

[dependencies]
blake3 = "1.8.3"
smol_str = "0.3"
thiserror = "2.0.18"

[dev-dependencies]
proptest = "1.6"
test-case = "3"
