[package]
name = "vexil-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Runtime support for Vexil generated code — bit-level I/O, Pack/Unpack traits, wire encoding primitives"
keywords = ["schema", "serialization", "binary", "protocol"]
categories = ["encoding"]

[dependencies]
thiserror = "2"
