[package]
name = "vexilc"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "The Vexil schema compiler CLI"
keywords = ["schema", "codegen", "compiler", "protocol", "cli"]
categories = ["compilers", "development-tools", "command-line-utilities"]

[dependencies]
vexil-lang = { path = "../vexil-lang", version = "^0.4.1" }
vexil-codegen-rust = { path = "../vexil-codegen-rust", version = "^0.4.1" }
vexil-codegen-ts = { path = "../vexil-codegen-ts", version = "^0.4.1" }
vexil-codegen-go = { path = "../vexil-codegen-go", version = "^0.4.1" }
vexil-store = { path = "../vexil-store", version = "^0.4.1" }
ariadne = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
