[package]
name = "vexilc"
version = "0.5.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "The Vexil schema compiler CLI"
keywords = ["schema", "codegen", "compiler", "protocol", "cli"]
categories = ["compilers", "development-tools", "command-line-utilities"]

[dependencies]
vexil-lang = { path = "../vexil-lang", version = "^0.4.3" }
vexil-codegen-rust = { path = "../vexil-codegen-rust", version = "^0.4.3" }
vexil-codegen-ts = { path = "../vexil-codegen-ts", version = "^0.4.3" }
vexil-codegen-go = { path = "../vexil-codegen-go", version = "^0.4.3" }
vexil-codegen-py = { path = "../vexil-codegen-py", version = "^0.4.3" }
vexil-store = { path = "../vexil-store", version = "^0.4.2" }
ariadne = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
notify = "8"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0.149"
