[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vexil_runtime"
version = "0.1.0"
description = "Vexil runtime for Python - binary serialization support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/vexil-lang/vexil"
Documentation = "https://vexil-lang.github.io/vexil/"
Repository = "https://github.com/vexil-lang/vexil.git"
"Bug Tracker" = "https://github.com/vexil-lang/vexil/issues"

[tool.hatch.build.targets.wheel]
packages = ["vexil_runtime"]
